[B]0.0.2[/B] (2018-11-03)
- Improve package description and language settings.
- Add link to channel web site.
- Add link to HD stream.
- Restructure menu, provide live and schedule sections.
[B]0.0.1[/B] (2016-09-12)
- First version of the Frikanalen Nett-TV plugin.