@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.frikanalen"
        name="Frikanalen Nett-TV"
-       version="0.0.2"
+       version="0.0.3"
        provider-name="frikanalen">
   <requires>
     <import addon="xbmc.python" version="2.24.0"/>
@@ -14,14 +14,21 @@
   <extension point="xbmc.addon.metadata">
     <platform>all</platform>
     <language>nn nb no en</language>
-    <summary lang="en">Watch Frikanalen Web TV</summary>
-    <summary lang="nb">Se Frikanalen Nett-TV</summary>
-    <description lang="en">The Norwegian open channel Frikanalen Web TV gives you the opportunity to watch live TV as well as recordings of many shows.</description>
-    <description lang="nb">Den norske åpne kanalen Frikanalen Nett-TV gir deg muligheten til å se direkte TV i tillegg til opptak av mange sendinger.</description>
+    <summary lang="en">Watch Frikanalen - Norways Open Channel</summary>
+    <summary lang="nb">Se Frikanalen - Norges åpne kanal</summary>
+    <description lang="en">The Norwegian open TV channel Frikanalen gives you the opportunity to watch live TV as well as recordings of many shows.</description>
+    <description lang="nb">Den norske åpne TV-kanalen Frikanalen gir deg muligheten til å se direkte TV i tillegg til opptak av mange sendinger.</description>
     <license>GNU GENERAL PUBLIC LICENSE. Version 2, June 1991</license>
     <source>https://github.com/Frikanalen/kodi-frikanalen</source>
     <website>http://www.frikanalen.no/</website>
-    <news>v0.0.2  (2018-11-03)
+    <news>v0.0.3  (2018-11-06)
+- Added HD stream option.
+- Added category listing of published videos.
+- Show video duration in schedule and category lists.
+- Updated to not crash with new API date format.
+- Added free text video search option.
+
+v0.0.2  (2018-11-03)
 - Improve package description and language settings.
 - Add link to channel web site.
 - Add link to HD stream.
